--- a/.github/workflows/deploy-asm-dev.yml
+++ b/.github/workflows/deploy-asm-dev.yml
@@ -2,6 +2,11 @@ name: "Deploy ASM-SITE DEV"
 
 on:
   workflow_dispatch:  # Permite execução manual do workflow
+    inputs:
+      directory:
+        description: "Caminho do diretório Terraform (ex: terraform-infrastructure/asm-site/dev)"
+        required: true
+        type: string
 
 jobs:
   plan:
@@ -9,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: terraform-infrastructure/asm-site/dev
+        working-directory: ${{ inputs.directory }}
 
     steps:
       - name: Checkout Repository
@@ -28,12 +33,12 @@ jobs:
 
   apply:
     name: "Terraform Apply"
-    needs: plan  # Executa somente após a conclusão do 'plan'
+    needs: plan
     runs-on: ubuntu-latest
-    environment: "approval-apply"  # Solicita aprovação para executar
+    environment: "approval-apply"
     defaults:
       run:
-        working-directory: terraform-infrastructure/asm-site/dev
+        working-directory: ${{ inputs.directory }}
 
     steps:
       - name: Checkout Repository
@@ -52,12 +57,12 @@ jobs:
 
   destroy:
     name: "Terraform Destroy"
-    needs: plan  # Executa somente após a conclusão do 'plan'
+    needs: plan
     runs-on: ubuntu-latest
-    environment: "approval-destroy"  # Solicita aprovação para executar
+    environment: "approval-destroy"
     defaults:
       run:
-        working-directory: terraform-infrastructure/asm-site/dev
+        working-directory: ${{ inputs.directory }}
 
     steps:
       - name: Checkout Repository
