--- a/.github/workflows/deploy-aws-dev.yml
+++ b/.github/workflows/deploy-aws-dev.yml
@@ -13,8 +13,8 @@ jobs:
     name: "Run Terraform Workflow"
     uses: ./.github/workflows/terraform-deploy.yml  # Chama o workflow reutilizável
     with:
-      directory: ${{ inputs.directory }}  # Passa o diretório informado manualmente
-    secrets:  # Passa os secrets explicitamente para o workflow reutilizável
+      directory: ${{ inputs.directory }}  # Passa o diretório como input
+    secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
