--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -7,6 +7,16 @@ on:
         description: 'Caminho completo do diretório Terraform (ex: terraform-infrastructure/asm-site/dev)'
         required: true
         type: string
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        description: "AWS Access Key ID"
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        description: "AWS Secret Access Key"
+        required: true
+      AWS_DEFAULT_REGION:
+        description: "AWS Default Region"
+        required: true
 
 jobs:
   plan:
@@ -21,6 +31,8 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      TF_LOG: DEBUG
+      TF_LOG_PATH: /tmp/terraform.log
 
     steps:
       - name: Checkout Repository
@@ -37,62 +49,6 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -input=false
 
-  apply:
-    name: "Terraform Apply"
-    needs: plan  # Só executa após o Plan
-    runs-on: ubuntu-latest
-    environment: approval-apply  # Aprovação necessária
-
-    defaults:
-      run:
-        working-directory: ${{ inputs.directory }}
-
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set Up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.5.0
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false
-
-  destroy:
-    name: "Terraform Destroy"
-    needs: plan  # Só executa após o Plan
-    runs-on: ubuntu-latest
-    environment: approval-destroy  # Aprovação necessária
-
-    defaults:
-      run:
-        working-directory: ${{ inputs.directory }}
-
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set Up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.5.0
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Destroy
-        run: terraform destroy -auto-approve -input=false
+      - name: Display Terraform Log
+        if: always()
+        run: cat /tmp/terraform.log
