--- a/.github/workflows/deploy-aws-dev.yml
+++ b/.github/workflows/deploy-aws-dev.yml
@@ -11,9 +11,9 @@ on:
 jobs:
   deploy:
     name: "Run Terraform Workflow"
-    uses: ./.github/workflows/terraform-deploy.yml  # Chama o workflow reutilizável
+    uses: ./.github/workflows/terraform-deploy.yml
     with:
-      directory: ${{ inputs.directory }}  # Passa o diretório como input
+      directory: ${{ inputs.directory }}
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
