--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -49,11 +49,14 @@ jobs:
       - name: Terraform Init
         run: |
           terraform init \
-            -backend-config="key=terraform-state/${{ steps.state_key.outputs.state_key }}.tfstate"
+            -backend-config="key=terraform-state/${{ steps.state_key.outputs.state_key }}.tfstate" \
+            -var-file="dev.tfvars"
         working-directory: ${{ inputs.directory }}
 
       - name: Terraform Plan
-        run: terraform plan -input=false -var="state_key=${{ steps.state_key.outputs.state_key }}"
+        run: terraform plan -input=false \
+          -var="state_key=${{ steps.state_key.outputs.state_key }}" \
+          -var-file="dev.tfvars"
         working-directory: ${{ inputs.directory }}
 
   terraform-apply:
@@ -78,11 +81,14 @@ jobs:
       - name: Terraform Init
         run: |
           terraform init \
-            -backend-config="key=terraform-state/${{ needs.terraform-plan.outputs.state_key }}.tfstate"
+            -backend-config="key=terraform-state/${{ needs.terraform-plan.outputs.state_key }}.tfstate" \
+            -var-file="dev.tfvars"
         working-directory: ${{ inputs.directory }}
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false -var="state_key=${{ needs.terraform-plan.outputs.state_key }}"
+        run: terraform apply -auto-approve -input=false \
+          -var="state_key=${{ needs.terraform-plan.outputs.state_key }}" \
+          -var-file="dev.tfvars"
         working-directory: ${{ inputs.directory }}
 
   terraform-destroy:
@@ -107,9 +113,12 @@ jobs:
       - name: Terraform Init
         run: |
           terraform init \
-            -backend-config="key=terraform-state/${{ needs.terraform-plan.outputs.state_key }}.tfstate"
+            -backend-config="key=terraform-state/${{ needs.terraform-plan.outputs.state_key }}.tfstate" \
+            -var-file="dev.tfvars"
         working-directory: ${{ inputs.directory }}
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve -input=false -var="state_key=${{ needs.terraform-plan.outputs.state_key }}"
+        run: terraform destroy -auto-approve -input=false \
+          -var="state_key=${{ needs.terraform-plan.outputs.state_key }}" \
+          -var-file="dev.tfvars"
         working-directory: ${{ inputs.directory }}
